<?xml version="1.0"?>
<package format="2">
  <name>xesc</name>
  <version>1.0.0</version>
  <description>
    Metapackage of XESC packages.
  </description>
  <maintainer email="clemens1@familie-elflein.de">Clemens Elflein</maintainer>
  <author email="clemens1@familie-elflein.de">Clemens Elflein</author>
  <license>Apache 2.0</license>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <depend>xesc_msgs</depend>
  <depend>xesc_driver</depend>

  <export>
    <metapackage/>
  </export>

</package>
