<?xml version="1.0"?>
<package format="3">
  <name>xesc_msgs</name>
  <version>1.0.0</version>
  <description>
    ROS message definitions for VESC open source motor driver.
  </description>
  <maintainer email="clemens1@familie-elflein.de">Clemens Elflein</maintainer>
  <author email="clemens1@familie-elflein.de">Clemens Elflein</author>
  <license>Apache 2.0</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
